--- a/style.css
+++ b/style.css
@@ -9,3 +9,150 @@
 img{
     padding: 0;
 }
+.wrapper {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+   
+  }
+  
+  /* fut-player-card styles */
+  .fut-player-card {
+    position: relative;
+    width: 100px;  /* Reduced from 300px */
+    height: 161px; /* Reduced from 485px */
+    background-image: url(https://selimdoyranli.com/cdn/fut-player-card/img/card_bg.png);
+    background-position: center center;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    padding: 1.27rem 0; /* Reduced padding */
+    z-index: 2;
+    transition: 200ms ease-in;
+  }
+  
+  .fut-player-card .player-card-top {
+    position: relative;
+    display: flex;
+    color: #e9cc74;
+    padding: 0 0.5rem; /* Reduced padding */
+  }
+  
+  .fut-player-card .player-card-top .player-master-info {
+    position: absolute;
+    line-height: 0.73rem; /* Reduced line-height */
+    font-weight: 300;
+    padding: 0.5rem 0;
+    text-transform: uppercase;
+  }
+  
+  .fut-player-card .player-card-top .player-master-info .player-rating {
+    font-size: 0.67rem; /* Reduced font-size */
+  }
+  
+  .fut-player-card .player-card-top .player-master-info .player-position {
+    font-size: 0.47rem; /* Reduced font-size */
+  }
+  
+  .fut-player-card .player-card-top .player-master-info .player-nation {
+    display: block;
+    width: 0.67rem; /* Reduced width */
+    height: 8px; /* Reduced height */
+    margin: 0.1rem 0; /* Reduced margin */
+  }
+  
+  .fut-player-card .player-card-top .player-master-info .player-nation img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+  }
+  
+  .fut-player-card .player-card-top .player-master-info .player-club {
+    display: block;
+    width: 0.7rem; /* Reduced width */
+    height: 13px; /* Reduced height */
+  }
+  
+  .fut-player-card .player-card-top .player-master-info .player-club img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+  }
+  
+  .fut-player-card .player-card-top .player-picture {
+    width: 67px; /* Reduced width */
+    height: 67px; /* Reduced height */
+    margin: 0 auto;
+    overflow: hidden;
+  }
+  
+  .fut-player-card .player-card-top .player-picture img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    position: relative;
+    right: -0.5rem; /* Reduced right positioning */
+    bottom: 0;
+  }
+  
+  .fut-player-card .player-card-bottom {
+    position: relative;
+  }
+  
+  .fut-player-card .player-card-bottom .player-info {
+    display: block;
+    padding: 0.1rem 0;
+    color: #e9cc74;
+    width: 90%;
+    margin: 0 auto;
+    height: auto;
+    position: relative;
+    z-index: 2;
+  }
+  
+  .fut-player-card .player-card-bottom .player-info .player-name {
+    width: 100%;
+    display: block;
+    text-align: center;
+    font-size: 0.53rem; /* Reduced font-size */
+    text-transform: uppercase;
+    border-bottom: 2px solid rgba(233, 204, 116, 0.1);
+    padding-bottom: 0.1rem; /* Reduced padding */
+  }
+  
+  .fut-player-card .player-card-bottom .player-info .player-name span {
+    display: block;
+    text-shadow: 2px 2px #111;
+  }
+  
+  .fut-player-card .player-card-bottom .player-info .player-features {
+    margin: 0.2rem auto; /* Reduced margin */
+    display: flex;
+    justify-content: center;
+  }
+  
+  .fut-player-card .player-card-bottom .player-info .player-features .player-features-col {
+    border-right: 2px solid rgba(233, 204, 116, 0.1);
+    padding: 0 0.77rem; /* Reduced padding */
+  }
+  
+  .fut-player-card .player-card-bottom .player-info .player-features .player-features-col span {
+    display: flex;
+    font-size: 0.8rem; /* Reduced font-size */
+    text-transform: uppercase;
+  }
+  
+  .fut-player-card .player-card-bottom .player-info .player-features .player-features-col span .player-feature-value {
+    margin-right: 0.1rem; /* Reduced margin */
+    font-weight: 700;
+  }
+  
+  .fut-player-card .player-card-bottom .player-info .player-features .player-features-col span .player-feature-title {
+    font-weight: 300;
+  }
+  
+  .fut-player-card .player-card-bottom .player-info .player-features .player-features-col:last-child {
+    border: 0;
+  }
+  
