--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ img{
     font-size: 0.67rem; /* Reduced font-size */
   }
   
-  .fut-player-card .player-card-top .player-master-info .player-position {
+  .fut-player-card .player-card-top .player-master-info .player-position .player-close {
     font-size: 0.47rem; /* Reduced font-size */
   }
   
@@ -154,5 +154,10 @@ img{
   
   .fut-player-card .player-card-bottom .player-info .player-features .player-features-col:last-child {
     border: 0;
+  }
+  .player-close{
+    background-color: red;
+    border-radius: 100%;
+    padding: 1px;
   }
   
