--- a/style.css
+++ b/style.css
@@ -156,8 +156,15 @@ img{
     border: 0;
   }
   .player-close{
+    width: 10px;
+    height: 10px;
+    top: 0;
+    left: 50%;
+    opacity: 0;
+    position: absolute;
     background-color: red;
+    opacity: 1;
     border-radius: 100%;
-    padding: 1px;
+    
   }
   
