--- a/style.css
+++ b/style.css
@@ -21,143 +21,146 @@ img{
   /* fut-player-card styles */
   .fut-player-card {
     position: relative;
-    width: 100px;  /* Reduced from 300px */
-    height: 161px; /* Reduced from 485px */
+    width: 90px;
+    height: 145px;
     background-image: url(https://selimdoyranli.com/cdn/fut-player-card/img/card_bg.png);
     background-position: center center;
     background-size: 100% 100%;
     background-repeat: no-repeat;
-    padding: 1.27rem 0; /* Reduced padding */
+    padding: 1rem 0;
     z-index: 2;
     transition: 200ms ease-in;
-  }
-  
-  .fut-player-card .player-card-top {
+}
+
+.fut-player-card .player-card-top {
     position: relative;
     display: flex;
     color: #e9cc74;
-    padding: 0 0.5rem; /* Reduced padding */
-  }
-  
-  .fut-player-card .player-card-top .player-master-info {
+    padding: 0 0.4rem;
+}
+
+.fut-player-card .player-card-top .player-master-info {
     position: absolute;
-    line-height: 0.73rem; /* Reduced line-height */
+    line-height: 0.7rem;
     font-weight: 300;
-    padding: 0.5rem 0;
+    padding: 0.4rem 0;
     text-transform: uppercase;
-  }
-  
-  .fut-player-card .player-card-top .player-master-info .player-rating {
-    font-size: 0.67rem; /* Reduced font-size */
-  }
-  
-  .fut-player-card .player-card-top .player-master-info .player-position .player-close {
-    font-size: 0.47rem; /* Reduced font-size */
-  }
-  
-  .fut-player-card .player-card-top .player-master-info .player-nation {
+}
+
+.fut-player-card .player-card-top .player-master-info .player-rating {
+    font-size: 0.63rem;
+}
+
+.fut-player-card .player-card-top .player-master-info .player-position .player-close {
+    font-size: 0.43rem;
+}
+
+.fut-player-card .player-card-top .player-master-info .player-nation {
     display: block;
-    width: 0.67rem; /* Reduced width */
-    height: 8px; /* Reduced height */
-    margin: 0.1rem 0; /* Reduced margin */
-  }
-  
-  .fut-player-card .player-card-top .player-master-info .player-nation img {
+    width: 0.63rem;
+    height: 7px;
+    margin: 0.08rem 0;
+}
+
+.fut-player-card .player-card-top .player-master-info .player-nation img {
     width: 100%;
     height: 100%;
     object-fit: contain;
-  }
-  
-  .fut-player-card .player-card-top .player-master-info .player-club {
+}
+
+.fut-player-card .player-card-top .player-master-info .player-club {
     display: block;
-    width: 0.7rem; /* Reduced width */
-    height: 13px; /* Reduced height */
-  }
-  
-  .fut-player-card .player-card-top .player-master-info .player-club img {
+    width: 0.65rem;
+    height: 12px;
+}
+
+.fut-player-card .player-card-top .player-master-info .player-club img {
     width: 100%;
     height: 100%;
     object-fit: contain;
-  }
-  
-  .fut-player-card .player-card-top .player-picture {
-    width: 67px; /* Reduced width */
-    height: 67px; /* Reduced height */
+}
+
+.fut-player-card .player-card-top .player-picture {
+    width: 60px;
+    height: 60px;
     margin: 0 auto;
     overflow: hidden;
-  }
-  
-  .fut-player-card .player-card-top .player-picture img {
+}
+
+.fut-player-card .player-card-top .player-picture img {
     width: 100%;
     height: 100%;
     object-fit: contain;
     position: relative;
-    right: -0.5rem; /* Reduced right positioning */
+    right: -0.4rem;
     bottom: 0;
-  }
-  
-  .fut-player-card .player-card-bottom {
+}
+
+.fut-player-card .player-card-bottom {
     position: relative;
-  }
-  
-  .fut-player-card .player-card-bottom .player-info {
+}
+
+.fut-player-card .player-card-bottom .player-info {
     display: block;
-    padding: 0.1rem 0;
+    padding: 0.08rem 0;
     color: #e9cc74;
     width: 90%;
     margin: 0 auto;
     height: auto;
     position: relative;
     z-index: 2;
-  }
-  
-  .fut-player-card .player-card-bottom .player-info .player-name {
+}
+
+.fut-player-card .player-card-bottom .player-info .player-name {
     width: 100%;
     display: block;
     text-align: center;
-    font-size: 0.53rem; /* Reduced font-size */
+    font-size: 0.4rem;
+    padding-bottom: 0.03rem;
     text-transform: uppercase;
     border-bottom: 2px solid rgba(233, 204, 116, 0.1);
-    padding-bottom: 0.1rem; /* Reduced padding */
-  }
-  
-  .fut-player-card .player-card-bottom .player-info .player-name span {
+}
+
+.fut-player-card .player-card-bottom .player-info .player-name span {
     display: block;
     text-shadow: 2px 2px #111;
-  }
-  
-  .fut-player-card .player-card-bottom .player-info .player-features {
-    margin: 0.2rem auto; /* Reduced margin */
+}
+
+.fut-player-card .player-card-bottom .player-info .player-features {
+    margin: 0.15rem auto;
     display: flex;
     justify-content: center;
-  }
-  
-  .fut-player-card .player-card-bottom .player-info .player-features .player-features-col {
+}
+
+.fut-player-card .player-card-bottom .player-info .player-features .player-features-col {
     border-right: 2px solid rgba(233, 204, 116, 0.1);
-    padding: 0 0.77rem; /* Reduced padding */
-  }
-  
-  .fut-player-card .player-card-bottom .player-info .player-features .player-features-col span {
+    padding: 0 0.7rem;
+}
+
+.fut-player-card .player-card-bottom .player-info .player-features .player-features-col span {
     display: flex;
-    font-size: 0.8rem; /* Reduced font-size */
+    font-size: 0.45rem;
     text-transform: uppercase;
-  }
-  
-  .fut-player-card .player-card-bottom .player-info .player-features .player-features-col span .player-feature-value {
-    margin-right: 0.1rem; /* Reduced margin */
+}
+
+.fut-player-card .player-card-bottom .player-info .player-features .player-features-col span .player-feature-value {
+    margin-right: 0.05rem;
     font-weight: 700;
-  }
-  
-  .fut-player-card .player-card-bottom .player-info .player-features .player-features-col span .player-feature-title {
+    font-size: 0.5rem;
+}
+
+.fut-player-card .player-card-bottom .player-info .player-features .player-features-col span .player-feature-title {
     font-weight: 300;
-  }
-  
-  .fut-player-card .player-card-bottom .player-info .player-features .player-features-col:last-child {
+    font-size: 0.4rem;
+}
+
+.fut-player-card .player-card-bottom .player-info .player-features .player-features-col:last-child {
     border: 0;
-  }
-  .player-close{
-    width: 10px;
-    height: 10px;
+}
+
+.player-close {
+    width: 8px;
+    height: 8px;
     top: 0;
     left: 50%;
     opacity: 0;
@@ -165,6 +168,80 @@ img{
     background-color: red;
     opacity: 1;
     border-radius: 100%;
-    
-  }
-  
+}
+
+@media screen and (max-width: 768px) {
+    .fut-player-card {
+        width: 60px;
+        height: 100px;
+        padding: 0.6rem 0;
+    }
+
+    .fut-player-card .player-card-top {
+        padding: 0 0.2rem;
+    }
+
+    .fut-player-card .player-card-top .player-master-info {
+        line-height: 0.5rem;
+        font-size: 0.5rem;
+        padding: 0.2rem 0;
+    }
+
+    .fut-player-card .player-card-top .player-master-info .player-rating {
+        font-size: 0.4rem;
+    }
+
+    .fut-player-card .player-card-top .player-master-info .player-position .player-close {
+        font-size: 0.3rem;
+    }
+
+    .fut-player-card .player-card-top .player-master-info .player-nation {
+        width: 0.4rem;
+        height: 4px;
+        margin: 0.03rem 0;
+    }
+
+    .fut-player-card .player-card-top .player-master-info .player-club {
+        width: 0.45rem;
+        height: 8px;
+    }
+
+    .fut-player-card .player-card-top .player-picture {
+        width: 40px;
+        height: 40px;
+    }
+
+    .fut-player-card .player-card-bottom .player-info {
+        padding: 0.03rem 0;
+    }
+
+    .fut-player-card .player-card-bottom .player-info .player-name {
+        font-size: 0.35rem;
+        padding-bottom: 0.03rem;
+    }
+
+    .fut-player-card .player-card-bottom .player-info .player-features {
+        margin: 0.05rem auto;
+    }
+
+    .fut-player-card .player-card-bottom .player-info .player-features .player-features-col {
+        padding: 0 0.4rem;
+    }
+
+    .fut-player-card .player-card-bottom .player-info .player-features .player-features-col span {
+        font-size: 0.3rem;
+    }
+
+    .fut-player-card .player-card-bottom .player-info .player-features .player-features-col span .player-feature-value {
+        font-size: 0.35rem;
+    }
+
+    .fut-player-card .player-card-bottom .player-info .player-features .player-features-col span .player-feature-title {
+        font-size: 0.25rem;
+    }
+
+    .player-close {
+        width: 5px;
+        height: 5px;
+    }
+}
